--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,91 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+    font-family: Poppins, sans-serif;
+    background-color: #f4f4f4;
+    padding: 30px;
+    color: #333;
+    background-color: #7c57ff
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.app{
+    max-width: 600px;
+    margin: 0 auto 300px;
+    background-color: #efefef;
+    padding: 20px 30px;
+    border-radius: 10px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+h2{
+    margin-bottom: 10px;
 }
 
-.card {
-  padding: 2em;
+p{
+    margin: 10px 0;
 }
 
-.read-the-docs {
-  color: #888;
+input{
+    box-sizing: border-box;
+}
+
+button{
+    background-color: #7c5fff;
+    color: #fff;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    opacity: .8;
+    transition: .3s;
+    margin-right: 10px;
+}
+
+button:hover{
+    opacity: 1;
+}
+
+.todo-list{
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #555;
+}
+
+.todo{
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.complete{
+    background-color: #5cb85c;
+}
+
+.remove{
+    background-color: #d9534f;
+}
+
+todo-form{
+    padding-bottom: 1.5rem;
+}
+
+input,
+select{
+    padding: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    width: 100%;
+}
+
+.search{
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #555;
 }
